# 2dgameengine

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  gameengine  imgui.ini
.cache/clangd/index/: Game.cpp.EC75BB9912F4F45E.idx  Game.h.ABB2BA6CF90CDD9B.idx  Main.cpp.3D77E83239FEB28C.idx
src/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  CMakeLists.txt  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameEngine.cpp  Main  Main.cpp  Physics.cpp  Physics.h  Scene.cpp  Scene.h  Scene_Menu.cpp  Scene_Menu.h  Scene_Play.cpp  Scene_Play.h  Vec2.cpp  Vec2.h  config.txt  main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  RigidBodyComponent.h  SpriteComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: Event.h  EventBus.h
src/Events/: CollisionEvent.h  KeyPressedEvent.h
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.cpp  Logger.h
src/Systems/: AnimationSystem.h  CollisionSystem.h  DamageSystem.h  KeyboardControlSystem.h  MovementSystem.h  RenderColliderSystem.h  RenderSystem.h
